--- a/example/package.json
+++ b/example/package.json
@@ -3,12 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "preandroid": "cd node_modules/react-native-pdftron && npm start && cd ../../",
-    "android": "react-native run-android",
-    "preios": "cd node_modules/react-native-pdftron && npm start && cd ../../",
-    "ios": "react-native run-ios",
-    "prestart": "cd node_modules/react-native-pdftron && npm start && cd ../../",
-    "start": "react-native start",
+    "android": "npx react-native run-android",
+    "ios": "npx react-native run-ios",
+    "start": "npx react-native start",
     "test": "jest",
     "lint": "eslint ."
   },
